[package]
name = "rust-send-html-smtp-emails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
handlebars = "4.3.7"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.0", features = ["full"] }
